# draw_polygons_on_private_map

./: .dockerignore  .env.prod  .env.test  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  generate_project.py  pyproject.toml  wait-for-it.sh
backend/: DOCKEFILE  Dockerfile  database.py  init.sql  main.py  models.py  requirements.txt
db/: DOCKERFILE  Dockerfile
frontend/: app.js  index.html
initdb/: 01-init-world.sql  02-import-osm.sh  02-run-osm-import.sh  osm_import.py
initdb/docker/: test-postgis.Dockerfile
tests/: test_polygons.py
